--- a/valuetransfer/src/main/res/layout/dialog_identity_details.xml
+++ b/valuetransfer/src/main/res/layout/dialog_identity_details.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clDialog"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingHorizontal="12dp"
@@ -27,6 +28,7 @@
         />
 
     <LinearLayout
+        android:id="@+id/clContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -320,11 +322,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_weight="1"
+                    android:inputType="number"
                     android:background="@drawable/pill_rounded"
                     android:backgroundTint="@color/white"
                     android:paddingVertical="8dp"
                     android:paddingStart="8dp"
-                    android:inputType="number"
                     android:textSize="14sp" />
 
             </LinearLayout>
@@ -361,13 +363,43 @@
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
+    </LinearLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clCancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/clContent"
+        app:layout_constraintEnd_toStartOf="@+id/clSaveIdentity"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <Button
+            android:id="@+id/btnCancel"
+            style="@style/ButtonRedRounded"
+            android:layout_marginTop="12dp"
+            android:text="Cancel"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clSaveIdentity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/clContent"
+        app:layout_constraintStart_toEndOf="@+id/clCancel"
+        app:layout_constraintEnd_toEndOf="parent">
         <Button
             android:id="@+id/btnSaveIdentity"
             style="@style/ButtonDarkGreenRounded"
             android:layout_marginTop="12dp"
-            android:text="Save" />
-
-    </LinearLayout>
+            android:text="Save"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
